tests/snapshots/engine__rat001_example.snap
---
source: tests/engine.rs
expression: result.diagnostics
---
[
  {
    "code": "RAT001",
    "message": "Design-choice arguments precede the first procedure or runnable example.",
    "filename": "docs/guide.md",
    "location": {
      "row": 4,
      "column": 1
    },
    "end_location": {
      "row": 4,
      "column": 114
    },
    "byte_range": {
      "start": 20,
      "end": 133
    },
    "fix": null,
    "url": null,
    "related": [
      {
        "filename": "docs/guide.md",
        "location": {
          "row": 8,
          "column": 1
        },
        "end_location": {
          "row": 8,
          "column": 19
        },
        "byte_range": {
          "start": 270,
          "end": 288
        },
        "message": "The main flow starts here."
      }
    ],
    "suggestion": "Move the extended rationale to an ADR and link to it after the main steps."
  }
]
